[package]
edition = "2018"
name = "dht"
version = "0.1.35"
description = "DHT protocol library"

[dependencies]
arrayref = "0.3"
async-trait = "0.1"
base64 = "0.13"
dashmap = "4.0"
failure = "0.1"
hex = "^0"
log = "0.4"
rand = "0.7"
sha2 = "0.8"
tokio = { version = "1.6", features = ["rt-multi-thread"] }

ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
adnl = { git = "https://github.com/broxus/ton-labs-adnl", default-features = false, features = ["node"] }
overlay = { git = "https://github.com/broxus/ton-labs-overlay.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
